# nlp-app

./: README.md  app.py  nlp.ipynb  pyproject.toml
models/: lstm_model.h5  lstm_model.keras  vectorizer.pkl
