[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["erwincarlogonzales <erwincarlogonzales@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
nltk = "^3.9.1"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
numpy = "1.26.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
